Prevented download and instead show canvas
Used for debugging why canvas and html don't look alike.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -35,17 +35,18 @@ p.contact{
   font-size: 0.9rem;
 }
 
-p{
-  font-size: 1rem;
-}
+
 
 span{
   font-size: 1rem;
 }
 
-h3{
-  font-weight: bold;
+
+
+p{
+  font-size: 1rem;
 }
+
 
 
 
